feat: testing setup and register controller test
